--- a/css/css1.css
+++ b/css/css1.css
@@ -57,13 +57,14 @@ nav ul li a {
 }
 
 main {
+    z-index: 10;
     padding: 3rem 0;
 }
 
 section {
     position: center;
     padding-bottom: 0.5rem;
-    z-index: 10;
+
 }
 
 h2 {
@@ -77,6 +78,8 @@ h2 {
     align-items: center; /* 垂直居中对齐 */
 }
 #chartContainer {
+    margin-left: -1rem;
+    margin-right: 1rem;
     width: 1rem;
     height: 8rem;
     border: 0.03rem solid #ccc;
@@ -87,9 +90,10 @@ h2 {
     border: 0.03rem solid #ccc;
 }
 .chartItem {
+    z-index: 10;
     text-align: center;
     flex: 1;
-    margin-right: 0.4rem;
+    margin-right: 0.9rem;
 }
 table {
     width: 100%;
@@ -124,10 +128,10 @@ footer p{
 .map .chart {
     position: absolute;
     top: 0;
-    left: 0rem;
+    left: 1rem;
     /*z-index: 5;*/
-    height: 12.125rem;
-    width: 100%;
+    height: 8.125rem;
+    width: 88%;
 }
 .map .map1,
 .map .map2,
@@ -136,23 +140,23 @@ footer p{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 6.475rem;
-    height: 6.475rem;
+    width: 4.475rem;
+    height:4.475rem;
     background: url(../img/map.png) no-repeat;
     background-size: 100% 100%;
     opacity: 0.3;
 }
 .map .map2 {
-    width: 8.0375rem;
-    height: 8.0375rem;
+    width: 5.0375rem;
+    height: 5.0375rem;
     background-image: url(../img/lbx.png);
     opacity: 0.6;
     animation: rotate 15s linear infinite;
     z-index: 2;
 }
 .map .map3 {
-    width: 7.075rem;
-    height: 7.075rem;
+    width: 4.075rem;
+    height: 4.075rem;
     background-image: url(../img/jt.png);
     animation: rotate1 10s linear infinite;
 }
