--- a/css/css1.css
+++ b/css/css1.css
@@ -129,7 +129,7 @@ footer p{
     position: absolute;
     top: 0;
     left: 1rem;
-    /*z-index: 5;*/
+    z-index: 5;
     height: 8.125rem;
     width: 88%;
 }
